# actix_todo

./: .env  Cargo.toml
migrations/2021-02-01-164828_create_initial_tables/: down.sql  up.sql
src/: error.rs  main.rs  schema.rs
src/config/: constants.rs  database.rs  error_handler.rs  mod.rs  route.rs
src/controllers/: auth_controller.rs  mod.rs  ping_controller.rs  user_controller.rs
src/middlewares/: auth_middleware.rs
src/models/: response.rs  user.rs  user_token.rs
src/services/: auth_service.rs
