[package]
name = "actix_todo"
version = "0.1.0"
authors = ["Luku <luku.3659@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-router = "0.2.6"
actix-web = "3.3.2"
anyhow = "1.0.38"
bcrypt = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive-new = "0.5.8"
derive_more = "0.99.7"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
futures = "0.3.12"
jsonwebtoken = "7.2.0"
log = "0.4.14"
once_cell = "1.5.2"
r2d2 = "0.8.9"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
